--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Portfolio site</title>
+        <link rel="stylesheet" href="css/index.css">
     </head>
     <body>
         <div>
