--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,7 @@
                                 <h1>Dusan Djordjic</h1>
                             </div>
                             <div class="quote-wrapper">
-                                <p>"Nothing works unlles you do"</p>
+                                <p>"Nothing works unless you do"</p>
                             </div>
                         </div>
                     </div>
@@ -146,6 +146,185 @@
             </div>
         </div>
         <!-- General Information END -->
+        <!-- My Work Designs -->
+        <div class="mw-container">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="mw-title">
+                            <h2 class="mw-t">My Work</h2>
+                            <h2 class="mw-t-sec">Designs</h2>
+                            <p class="mw-des">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, esse.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row cards-row">
+                    <!-- Card -->
+                    <div class="col-lg-4 col-md-6 col-xs-12">
+                        <div class="mw-card">
+                            <div class="card-img">
+                                <img src="assets/img/man.jpg" alt="T-shirt Design">
+                            </div>
+                            <div class="card-title">
+                                <h4>Exclusive Design</h4>
+                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Card END -->
+                    <!-- Card -->
+                    <div class="col-lg-4 col-md-6 col-xs-12">
+                        <div class="mw-card">
+                            <div class="card-img">
+                                <img src="assets/img/man.jpg" alt="T-shirt Design">
+                            </div>
+                            <div class="card-title">
+                                <h4>Exclusive Design</h4>
+                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Card END -->
+                    <!-- Card -->
+                    <div class="col-lg-4 col-md-6 col-xs-12">
+                        <div class="mw-card">
+                            <div class="card-img">
+                                <img src="assets/img/man.jpg" alt="T-shirt Design">
+                            </div>
+                            <div class="card-title">
+                                <h4>Exclusive Design</h4>
+                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Card END -->
+                    <!-- Card -->
+                    <div class="col-lg-4 col-md-6 col-xs-12">
+                        <div class="mw-card">
+                            <div class="card-img">
+                                <img src="assets/img/man.jpg" alt="T-shirt Design">
+                            </div>
+                            <div class="card-title">
+                                <h4>Exclusive Design</h4>
+                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Card END -->
+                    <!-- Card -->
+                    <div class="col-lg-4 col-md-6 col-xs-12">
+                        <div class="mw-card">
+                            <div class="card-img">
+                                <img src="assets/img/man.jpg" alt="T-shirt Design">
+                            </div>
+                            <div class="card-title">
+                                <h4>Exclusive Design</h4>
+                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Card END -->
+                    <!-- Card -->
+                    <div class="col-lg-4 col-md-6 col-xs-12">
+                        <div class="mw-card">
+                            <div class="card-img">
+                                <img src="assets/img/man.jpg" alt="T-shirt Design">
+                            </div>
+                            <div class="card-title">
+                                <h4>Exclusive Design</h4>
+                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Card END -->
+                </div>
+            </div>
+        </div>
+        <!-- My Work Designs END -->
+        <!-- Education -->
+        <div class="edu">
+            <div class="container">
+                <!-- Education row article -->
+                <div class="row edu-row">
+                    <div class="col-lg-4">
+                        <div class="edu-title">
+                            <h3>JavaScript Course</h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam repudiandae eveniet enim perferendis consectetur earum?</p>
+                        </div>
+                        <div class="edu-blocks">
+                            <div class="edu-block">
+                                <div class="edu-border">
+                                    <h4>DOM</h4>
+                                </div>
+                            </div>
+                            <div class="edu-block">
+                                <div class="edu-border">
+                                    <h4>ECMA 6</h4>
+                                </div>
+                            </div>
+                            <div class="edu-block">
+                                <div class="edu-border">
+                                    <h4>OOP</h4>
+                                </div>
+                            </div>
+                            <div class="edu-block">
+                                <div class="edu-border">
+                                    <h4>55/75</h4>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="edu-des">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam in sit qui, id molestias fugit dolorum odit iusto corrupti rerum eius alias dolor delectus sequi praesentium laboriosam placeat ab, libero beatae blanditiis dolore vero maiores. Necessitatibus consequatur aspernatur voluptatem, magni facere ea delectus suscipit excepturi aut blanditiis deleniti doloremque adipisci.</p>
+                        </div>
+                    </div>
+                    <div class="edu-space d-lg-none d-block"></div>
+                    <div class="col-lg-6 offset-lg-2">
+                        <img src="assets/img/man.jpg" class="img-fluid" alt="Certificate">
+                    </div>
+                </div>
+                <!-- Education row article END -->
+                <!-- Education row article -->
+                <div class="row edu-row">
+                    <div class="col-lg-4">
+                        <div class="edu-title">
+                            <h3>JavaScript Course</h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam repudiandae eveniet enim perferendis consectetur earum?</p>
+                        </div>
+                        <div class="edu-blocks">
+                            <div class="edu-block">
+                                <div class="edu-border">
+                                    <h4>DOM</h4>
+                                </div>
+                            </div>
+                            <div class="edu-block">
+                                <div class="edu-border">
+                                    <h4>ECMA 6</h4>
+                                </div>
+                            </div>
+                            <div class="edu-block">
+                                <div class="edu-border">
+                                    <h4>OOP</h4>
+                                </div>
+                            </div>
+                            <div class="edu-block">
+                                <div class="edu-border">
+                                    <h4>55/75</h4>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="edu-des">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam in sit qui, id molestias fugit dolorum odit iusto corrupti rerum eius alias dolor delectus sequi praesentium laboriosam placeat ab, libero beatae blanditiis dolore vero maiores. Necessitatibus consequatur aspernatur voluptatem, magni facere ea delectus suscipit excepturi aut blanditiis deleniti doloremque adipisci.</p>
+                        </div>
+                    </div>
+                    <div class="edu-space d-lg-none d-block"></div>
+                    <div class="col-lg-6 offset-lg-2">
+                        <img src="assets/img/man.jpg" class="img-fluid" alt="Certificate">
+                    </div>
+                </div>
+                <!-- Education row article END -->
+            </div>
+        </div>
+        <!-- Education END -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
     </body>
 
