--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Dusan Djordjic</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
@@ -34,8 +35,9 @@
                 </ul>
             </div>
             <div class="nav-small d-lg-none d-block">
-                <div class="nav-arrow">
-                    <i class="bi bi-arrow-down-square-fill"></i>
+                <div class="nav-arrow-container">
+                    <a href="#" class="nav-arrow"><i class="bi bi-arrow-down-square-fill"></i></a>
+                    
                 </div>
                 <div class="nav-expanded">
                     <ul class="nav-links list-reset">
@@ -163,7 +165,7 @@
                     <div class="col-lg-4 col-md-6 col-xs-12">
                         <div class="mw-card">
                             <div class="card-img">
-                                <img src="assets/img/man.jpg" alt="T-shirt Design">
+                                <img src="assets/img/ExclusiveDesign-tshirt.jpg" alt="T-shirt Design">
                             </div>
                             <div class="card-title">
                                 <h4>Exclusive Design</h4>
@@ -176,7 +178,7 @@
                     <div class="col-lg-4 col-md-6 col-xs-12">
                         <div class="mw-card">
                             <div class="card-img">
-                                <img src="assets/img/man.jpg" alt="T-shirt Design">
+                                <img src="assets/img/GreatWave-tshirt.jpg" alt="T-shirt Design">
                             </div>
                             <div class="card-title">
                                 <h4>Exclusive Design</h4>
@@ -189,7 +191,7 @@
                     <div class="col-lg-4 col-md-6 col-xs-12">
                         <div class="mw-card">
                             <div class="card-img">
-                                <img src="assets/img/man.jpg" alt="T-shirt Design">
+                                <img src="assets/img/IdeNasaEraOsecamv3-tshirt.jpg" alt="T-shirt Design">
                             </div>
                             <div class="card-title">
                                 <h4>Exclusive Design</h4>
@@ -202,7 +204,7 @@
                     <div class="col-lg-4 col-md-6 col-xs-12">
                         <div class="mw-card">
                             <div class="card-img">
-                                <img src="assets/img/man.jpg" alt="T-shirt Design">
+                                <img src="assets/img/LaganoKoNaMoruV1-white-tshirt.jpg" alt="T-shirt Design">
                             </div>
                             <div class="card-title">
                                 <h4>Exclusive Design</h4>
@@ -215,7 +217,7 @@
                     <div class="col-lg-4 col-md-6 col-xs-12">
                         <div class="mw-card">
                             <div class="card-img">
-                                <img src="assets/img/man.jpg" alt="T-shirt Design">
+                                <img src="assets/img/picture-frame-print4-tshirt.jpg" alt="T-shirt Design">
                             </div>
                             <div class="card-title">
                                 <h4>Exclusive Design</h4>
@@ -228,7 +230,7 @@
                     <div class="col-lg-4 col-md-6 col-xs-12">
                         <div class="mw-card">
                             <div class="card-img">
-                                <img src="assets/img/man.jpg" alt="T-shirt Design">
+                                <img src="assets/img/texteffextv1-tshirt.jpg" alt="T-shirt Design">
                             </div>
                             <div class="card-title">
                                 <h4>Exclusive Design</h4>
@@ -279,7 +281,7 @@
                     </div>
                     <div class="edu-space d-lg-none d-block"></div>
                     <div class="col-lg-6 offset-lg-2">
-                        <img src="assets/img/man.jpg" class="img-fluid" alt="Certificate">
+                        <img src="assets/img/sertificate.jpg" class="img-fluid" alt="Certificate">
                     </div>
                 </div>
                 <!-- Education row article END -->
@@ -318,7 +320,7 @@
                     </div>
                     <div class="edu-space d-lg-none d-block"></div>
                     <div class="col-lg-6 offset-lg-2">
-                        <img src="assets/img/man.jpg" class="img-fluid" alt="Certificate">
+                        <img src="assets/img/sertificate.jpg" class="img-fluid" alt="Certificate">
                     </div>
                 </div>
                 <!-- Education row article END -->
@@ -353,7 +355,12 @@
             </div>
         </div>
         <!-- Footer END -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+        <div class="to-top">
+            <a href="#"><i class="bi bi-arrow-up-short"></i></a>
+        </div>
     </body>
-
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+    <script src="js/main.js"></script>
 </html>
