--- a/src/index.html
+++ b/src/index.html
@@ -14,23 +14,23 @@
                 <ul class="nav-links list-reset">
                     <li class="nav-link nav-link-active">
                         <i class="bi bi-house-fill"></i>
-                        <a href="">Home</a>
+                        <a href="#">Home</a>
                     </li>
                     <li class="nav-link">
                         <i class="bi bi-person-fill"></i>
-                        <a href="">About me</a>
+                        <a href="about.html">About me</a>
                     </li>
                     <li class="nav-link">
                         <i class="bi bi-briefcase-fill"></i>
-                        <a href="">My work</a>
+                        <a href="mywork.html">My work</a>
                     </li>
                     <li class="nav-link">
                         <i class="bi bi-book-fill"></i>
-                        <a href="">Education</a>
+                        <a href="edu.html">Education</a>
                     </li>
                     <li class="nav-link">
                         <i class="bi bi-telephone-fill"></i>
-                        <a href="">Contact</a>
+                        <a href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -43,23 +43,23 @@
                     <ul class="nav-links list-reset">
                         <li class="nav-link nav-link-active">
                             <i class="bi bi-house-fill"></i>
-                            <a href="">Home</a>
+                            <a href="#">Home</a>
                         </li>
                         <li class="nav-link">
                             <i class="bi bi-person-fill"></i>
-                            <a href="">About me</a>
+                            <a href="about.html">About me</a>
                         </li>
                         <li class="nav-link">
                             <i class="bi bi-briefcase-fill"></i>
-                            <a href="">My work</a>
+                            <a href="mywork.html">My work</a>
                         </li>
                         <li class="nav-link">
                             <i class="bi bi-book-fill"></i>
-                            <a href="">Education</a>
+                            <a href="edu.html">Education</a>
                         </li>
                         <li class="nav-link">
                             <i class="bi bi-telephone-fill"></i>
-                            <a href="">Contact</a>
+                            <a href="contact.html">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -96,12 +96,12 @@
             <div class="container">
                 <!-- GI Article -->
                 <div class="row gi-article">
-                    <div class="col-xl-2 offset-xl-2 col-lg-2 offset-lg-1 col-4 gi-sideline">
+                    <div class="col-xl-2 offset-xl-2 col-lg-2 offset-lg-1 col-5 gi-sideline">
                         <div class="circle c-u"></div>
                         <div class="circle c-d"></div>
                         <h2 class="gi-title">ABOUT</h2>
                     </div>
-                    <div class="col-xl-6 col-lg-8 col-8 ">
+                    <div class="col-xl-6 col-lg-8 col-7 ">
                         <div class="gi-text">
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur possimus voluptatum a. Omnis nam sapiente blanditiis quisquam, provident dignissimos saepe veritatis magni dolor asperiores. Mollitia labore unde, ipsum quia eos ad maiores pariatur, consequatur repellendus officia qui deserunt quod sapiente.</p>
                         </div>
@@ -113,12 +113,12 @@
                 <!-- GI Article END -->
                 <!-- GI Article -->
                 <div class="row gi-article">
-                    <div class="col-xl-2 offset-xl-2 col-lg-2 offset-lg-1 col-4 gi-sideline">
+                    <div class="col-xl-2 offset-xl-2 col-lg-2 offset-lg-1 col-5 gi-sideline">
                         <div class="circle c-u"></div>
                         <div class="circle c-d"></div>
                         <h2 class="gi-title">MY WORK</h2>
                     </div>
-                    <div class="col-xl-6 col-lg-8 col-8 ">
+                    <div class="col-xl-6 col-lg-8 col-7 ">
                         <div class="gi-text">
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur possimus voluptatum a. Omnis nam sapiente blanditiis quisquam, provident dignissimos saepe veritatis magni dolor asperiores. Mollitia labore unde, ipsum quia eos ad maiores pariatur, consequatur repellendus officia qui deserunt quod sapiente.</p>
                         </div>
@@ -130,12 +130,12 @@
                 <!-- GI Article END -->
                 <!-- GI Article -->
                 <div class="row gi-article">
-                    <div class="col-xl-2 offset-xl-2 col-lg-2 offset-lg-1 col-4 gi-sideline">
+                    <div class="col-xl-2 offset-xl-2 col-lg-2 offset-lg-1 col-5 gi-sideline">
                         <div class="circle c-u"></div>
                         <div class="circle c-d"></div>
                         <h2 class="gi-title">EDUCATION</h2>
                     </div>
-                    <div class="col-xl-6 col-lg-8 col-8 ">
+                    <div class="col-xl-6 col-lg-8 col-7 ">
                         <div class="gi-text">
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur possimus voluptatum a. Omnis nam sapiente blanditiis quisquam, provident dignissimos saepe veritatis magni dolor asperiores. Mollitia labore unde, ipsum quia eos ad maiores pariatur, consequatur repellendus officia qui deserunt quod sapiente.</p>
                         </div>
