--- a/src/about.html
+++ b/src/about.html
@@ -5,7 +5,7 @@
         <title>Dusan Djordjic</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-        <link rel="stylesheet" href="css/index.css">
+        <link rel="stylesheet" href="css/about.css">
     </head>
     <body>
         <!-- Navigation -->
@@ -66,7 +66,84 @@
             </div>
         </div>
         <!-- Navigation END -->
-
+        <!-- About me -->
+        <div class="am">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12 am-header">
+                        <h1>Wow, a whole page just about me!</h1>
+                    </div>
+                    <div class="col-4 am-img">
+                        <img class="img-fluid" src="assets/img/man.jpg" alt="my portrait">
+                    </div>
+                    <div class="col-6 am-content">
+                        <h2>Me talking about myself</h2>
+                        <p class="am-des">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus voluptate delectus earum dolores dolorum a cum rem veritatis molestiae incidunt.
+                        </p>
+                        <p class="am-par">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo modi magni nobis? Ipsam officia minus natus iure veritatis eveniet quod.
+                        </p>
+                        <div class="am-links">
+                            <ul class="list-reset am-list">
+                                <li class="am-link" id="ig">
+                                    <a href="#">
+                                        <i class="bi bi-instagram"></i>
+                                    </a>
+                                </li>
+                                <li class="am-link" id="gh">
+                                    <a href="#">
+                                        <i class="bi bi-github"></i>
+                                    </a>
+                                </li>
+                                <li class="am-link" id="li">
+                                    <a href="#">
+                                        <i class="bi bi-linkedin"></i>
+                                    </a>
+                                </li>
+                                <li class="am-link" id="tw">
+                                    <a href="#">
+                                        <i class="bi bi-twitter"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-2">
+                        <img class="img-fluid" src="assets/img/am-time.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- About me END -->
+        <!-- Footer -->
+        <div class="footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="f-icons-wrapper">
+                            <a href="#">
+                                <i class="bi bi-instagram"></i>
+                            </a>
+                            <a href="#">
+                                <i class="bi bi-twitter"></i>
+                            </a>
+                            <a href="#">
+                                <i class="bi bi-linkedin"></i>
+                            </a>
+                            <a href="#">
+                                <i class="bi bi-github"></i>
+                            </a>
+                        </div>
+                        <hr>
+                        <div class="f-copy">
+                            <p>&copy; Copyright Dusan Djordjic. All Rights Reserved</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Footer END -->       
     </body>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
