--- a/src/about.html
+++ b/src/about.html
@@ -73,45 +73,50 @@
                     <div class="col-12 am-header">
                         <h1>Wow, a whole page just about me!</h1>
                     </div>
-                    <div class="col-4 am-img">
-                        <img class="img-fluid" src="assets/img/man.jpg" alt="my portrait">
-                    </div>
-                    <div class="col-6 am-content">
-                        <h2>Me talking about myself</h2>
-                        <p class="am-des">
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus voluptate delectus earum dolores dolorum a cum rem veritatis molestiae incidunt.
-                        </p>
-                        <p class="am-par">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo modi magni nobis? Ipsam officia minus natus iure veritatis eveniet quod.
-                        </p>
-                        <div class="am-links">
-                            <ul class="list-reset am-list">
-                                <li class="am-link" id="ig">
-                                    <a href="#">
-                                        <i class="bi bi-instagram"></i>
-                                    </a>
-                                </li>
-                                <li class="am-link" id="gh">
-                                    <a href="#">
-                                        <i class="bi bi-github"></i>
-                                    </a>
-                                </li>
-                                <li class="am-link" id="li">
-                                    <a href="#">
-                                        <i class="bi bi-linkedin"></i>
-                                    </a>
-                                </li>
-                                <li class="am-link" id="tw">
-                                    <a href="#">
-                                        <i class="bi bi-twitter"></i>
-                                    </a>
-                                </li>
-                            </ul>
+                    <div class="col-12">
+                        <div class="row">
+                            <div class="col-lg-4 col-12 order-lg-1 order-md-3 order-3 am-img">
+                                <img class="img-fluid" src="assets/img/man.jpg" alt="my portrait">
+                            </div>
+                            <div class="col-lg-6 col-md-8 col-12 order-lg-2 order-md-1 order-1 am-content">
+                                <h2>Me talking about myself</h2>
+                                <p class="am-des">
+                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus voluptate delectus earum dolores dolorum a cum rem veritatis molestiae incidunt.
+                                </p>
+                                <p class="am-par">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo modi magni nobis? Ipsam officia minus natus iure veritatis eveniet quod.
+                                </p>
+                                <div class="am-links">
+                                    <ul class="list-reset am-list">
+                                        <li class="am-link" id="ig">
+                                            <a href="#">
+                                                <i class="bi bi-instagram"></i>
+                                            </a>
+                                        </li>
+                                        <li class="am-link" id="gh">
+                                            <a href="#">
+                                                <i class="bi bi-github"></i>
+                                            </a>
+                                        </li>
+                                        <li class="am-link" id="li">
+                                            <a href="#">
+                                                <i class="bi bi-linkedin"></i>
+                                            </a>
+                                        </li>
+                                        <li class="am-link" id="tw">
+                                            <a href="#">
+                                                <i class="bi bi-twitter"></i>
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="col-lg-2 col-md-4 col-8 offset-2 offset-md-0 order-lg-3 order-md-2 order-2 am-time">
+                                <img class="img-fluid" src="assets/img/am-time.png" alt="">
+                            </div>
                         </div>
                     </div>
-                    <div class="col-2">
-                        <img class="img-fluid" src="assets/img/am-time.png" alt="">
-                    </div>
+
                 </div>
             </div>
         </div>
