--- a/src/index.html
+++ b/src/index.html
@@ -289,28 +289,33 @@
                 <div class="row edu-row">
                     <div class="col-lg-4">
                         <div class="edu-title">
-                            <h3>JavaScript Course</h3>
+                            <h3>Web Design Course</h3>
                             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam repudiandae eveniet enim perferendis consectetur earum?</p>
                         </div>
                         <div class="edu-blocks">
                             <div class="edu-block">
                                 <div class="edu-border">
-                                    <h4>DOM</h4>
+                                    <h4>HTML</h4>
                                 </div>
                             </div>
                             <div class="edu-block">
                                 <div class="edu-border">
-                                    <h4>ECMA 6</h4>
+                                    <h4>CSS</h4>
                                 </div>
                             </div>
                             <div class="edu-block">
                                 <div class="edu-border">
-                                    <h4>OOP</h4>
+                                    <h4>SASS</h4>
                                 </div>
                             </div>
                             <div class="edu-block">
                                 <div class="edu-border">
-                                    <h4>55/75</h4>
+                                    <h4>BOOTSTRAP</h4>
+                                </div>
+                            </div>
+                            <div class="edu-block">
+                                <div class="edu-border">
+                                    <h4>101/126</h4>
                                 </div>
                             </div>
                         </div>
@@ -320,7 +325,7 @@
                     </div>
                     <div class="edu-space d-lg-none d-block"></div>
                     <div class="col-lg-6 offset-lg-2">
-                        <img src="assets/img/sertificate.jpg" class="img-fluid" alt="Certificate">
+                        <img src="assets/img/sertificate2.jpg" class="img-fluid" alt="Certificate">
                     </div>
                 </div>
                 <!-- Education row article END -->
